--- a/css/postingForm.css
+++ b/css/postingForm.css
@@ -10,13 +10,44 @@ form {
     
 }
 #content {
-    background-color: azure;
+    background-image: url(../bgPics/texture1.jpg);
+    width: 100%;    
+    background-size: contain;
     height: 800px;
 }
     
-
+#deskwork {
+    width: 100%;
+    height: 20%;
+}
+#ok {
+    font-size: 22px;
+    padding: 4px;
+    
+}
 
 #postButton {
-    
-    font-size: 25px;
+    margin-top: 20px;
+    font-size: 22px;
 }
+
+
+@media only screen and (min-width: 700px) {
+    #deskwork {
+        width: 100%;
+        height: 100%;
+    }
+}
+    
+    
+
+
+
+
+
+
+
+
+
+
+
