--- a/css/index.css
+++ b/css/index.css
@@ -1,257 +1,310 @@
+body, html {
+height: 100%;
+color: black;
+line-height: 2.5;
+margin: 0;
+padding: 0;
+font-family: Cinzel;
+}
 
-    @import url('https://fonts.googleapis.com/css?family=Julius+Sans+One&display=swap');
-    @import url('https://fonts.googleapis.com/css?family=Cinzel:700&display=swap');
+/* Create a Parallax Effect */
+.bgimg-1 {
+background-attachment: fixed;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+}
 
-    body,
-    html {
-        height: 100%;
-        color: black;
-        line-height: 2.5;
-        margin: 0;
-        padding: 0;
-        font-family: Cinzel;
-    }
+/* First image (Logo. Full height) */
+.bgimg-1 {
+background-image: url(../bgPics/mainBG.jpg);
+min-height: 100%;
+}
 
-    /* Create a Parallax Effect */
-    .bgimg-1 {
-        background-attachment: fixed;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
+.w3-display-middle {
+position: absolute;
+top: 39%;
+left: 50%;
+transform: translate(-50%, -50%);
+-ms-transform: translate(-50%, -50%);
+}
 
-    /* First image (Logo. Full height) */
-    .bgimg-1 {
-        background-image: url(../bgPics/mainBG.jpg);
-        min-height: 100%;
-    }
+.w3-bar .w3-bar-item {
+padding: 4px 25px;
+font-size: 17px;
+float: left;
+width: auto;
+border: none;
+display: block;
+outline: 0;
+}
 
-    .w3-display-middle {
-        position: absolute;
-        top: 39%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-    }
+.backDiv {
+text-align: center;
+color: white;
+background: linear-gradient(149deg, rgba(85, 85, 85, 0.05) 0%, rgba(85, 85, 85, 0.05) 25%, rgba(11, 11, 11, 0.05) 25%,
+rgba(11, 11, 11, 0.05) 50%, rgba(182, 182, 182, 0.05) 50%, rgba(182, 182, 182, 0.05) 75%, rgba(28, 28, 28, 0.05) 75%,
+rgba(28, 28, 28, 0.05) 100%), linear-gradient(232deg, rgba(145, 145, 145, 0.05) 0%, rgba(145, 145, 145, 0.05) 25%,
+rgba(165, 165, 165, 0.05) 25%, rgba(165, 165, 165, 0.05) 50%, rgba(84, 84, 84, 0.05) 50%, rgba(84, 84, 84, 0.05) 75%,
+rgba(131, 131, 131, 0.05) 75%, rgba(131, 131, 131, 0.05) 100%), linear-gradient(321deg, rgba(254, 254, 254, 0.05) 0%,
+rgba(254, 254, 254, 0.05) 25%, rgba(249, 249, 249, 0.05) 25%, rgba(249, 249, 249, 0.05) 50%, rgba(0, 0, 0, 0.05) 50%,
+rgba(0, 0, 0, 0.05) 75%, rgba(104, 104, 104, 0.05) 75%, rgba(104, 104, 104, 0.05) 100%), linear-gradient(90deg, rgb(21,
+8, 116), rgb(111, 197, 250));
+padding: 3% 3%;
+height: auto;
+font-family: sans-serif;
+font-size: 20px;
+width: 100%;
+line-height: 1.2;
+margin: auto 0;
 
-    .w3-bar .w3-bar-item {
-        padding: 4px 25px;
-        font-size: 17px;
-        float: left;
-        width: auto;
-        border: none;
-        display: block;
-        outline: 0;
-    }
+}
 
-    .backDiv {
-        text-align: center;
-        color: white;
-        background: linear-gradient(149deg, rgba(85, 85, 85, 0.05) 0%, rgba(85, 85, 85, 0.05) 25%, rgba(11, 11, 11, 0.05) 25%, rgba(11, 11, 11, 0.05) 50%, rgba(182, 182, 182, 0.05) 50%, rgba(182, 182, 182, 0.05) 75%, rgba(28, 28, 28, 0.05) 75%, rgba(28, 28, 28, 0.05) 100%), linear-gradient(232deg, rgba(145, 145, 145, 0.05) 0%, rgba(145, 145, 145, 0.05) 25%, rgba(165, 165, 165, 0.05) 25%, rgba(165, 165, 165, 0.05) 50%, rgba(84, 84, 84, 0.05) 50%, rgba(84, 84, 84, 0.05) 75%, rgba(131, 131, 131, 0.05) 75%, rgba(131, 131, 131, 0.05) 100%), linear-gradient(321deg, rgba(254, 254, 254, 0.05) 0%, rgba(254, 254, 254, 0.05) 25%, rgba(249, 249, 249, 0.05) 25%, rgba(249, 249, 249, 0.05) 50%, rgba(0, 0, 0, 0.05) 50%, rgba(0, 0, 0, 0.05) 75%, rgba(104, 104, 104, 0.05) 75%, rgba(104, 104, 104, 0.05) 100%), linear-gradient(90deg, rgb(21, 8, 116), rgb(111, 197, 250));
-        padding: 3% 8%;
-        height: auto;
-        font-family: sans-serif;
-        font-size: 20px;
-        width: 100%;
-        line-height: 1.2;
+#chronos1 {
 
-    }
+max-height: 600px;
+max-width: 600px;
+width: 100%;
+height: 55%;
+padding-left: 5%;
+padding-right: 5%;
+}
 
-    #chronos1 {
-        float: right;
-        max-height: 600px;
-        max-width: 600px;
-        width: 100%;
-        height: 55%;
-        padding-left: 5%;
-        padding-right: 5%;
-    }
 
-    #mainOne {
-        font-size: 80px;
-        margin: 0 0 65px 0;
-        padding-top: 8%;
-        font-family: Cinzel;
-        font-weight: 100;
-    }
+.chronosHead {
+text-align: center;
+margin: 0;
+padding-top: 5%;
+font-size: 43px;
+font-family: Cinzel;
+}
 
-    #onTheGo {
-        float: left;
-        max-height: 400px;
-        max-width: 400px;
-        width: 100%;
-        height: 50%;
-    }
 
-    #focus {
-        float: right;
-        max-height: 800px;
-        max-width: 800px;
-        padding-right: 5%;
-        padding-left: 5%;
-        width: 100%;
-        height: 50%;
-    }
+#start {
+text-align: center;
+font-size: 17px;
+border-radius: 15px;
+border-style: none;
+display: block;
+margin: auto;
+padding: 2px 33px;
+color: white;
+text-decoration: none;
+background: linear-gradient(to right, darkblue, #2948ff);
+}
 
-    .facts {
-        font-size: 70px;
-        margin-bottom: -20px;
-        font-family: Cinzel;
-    }
+#start:hover {
+cursor: pointer;
+}
 
-    .factNote {
-        font-size: 45px;
-        border-bottom: 4px solid white;
-        display: block;
-        margin: 0 10% 10% 10%;
-        padding-bottom: 15px;
-    }
+#start a {
+text-decoration: none;
+}
 
-    .chronosHead {
-        text-align: center;
-        margin: 0;
-        padding-top: 2%;
-        font-size: 33px;
-        font-family: Cinzel;
-    }
+#learn {
+position: absolute;
+top: 85%;
+left: 50%;
+transform: translate(-50%, -50%);
+font-size: 22px;
+}
 
-    #progress {
-        max-height: 350px;
-        max-width: 350px;
-        width: 100%;
-    }
+#learn a {
+text-decoration: none;
+color: black;
+}
 
-    #start {
-        text-align: center;
-        font-size: 17px;
-        border-radius: 15px;
-        border-style: none;
-        display: block;
-        margin: auto;
-        padding: 2px 33px;
-        color: white;
-        text-decoration: none;
-        background: linear-gradient(to right, darkblue, #2948ff);
-    }
+@media only screen and (min-width: 480px) {
+#chronos1 {
+width: 100%;
+padding: 0 10% 10% 10%;
+display: block;
+max-width: 700px;
+max-height: 800px
+}
 
-    #start:hover {
-        cursor: pointer;
-    }
+p {
+display: block;
+line-height: 60px;
+}
 
-    #start a {
-        text-decoration: none;
-    }
+#onTheGo {
+display: block;
+max-height: 1000px;
+max-width: 1000px;
+width: 100%;
+height: 60%;
+}
 
-    #learn {
-        position: absolute;
-        top: 85%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 22px;
-    }
+#mainOne {
+font-size: 80px;
+margin: 0 0 65px 0;
+padding-top: 8%;
+font-family: Cinzel;
+font-weight: 100;
+}
 
-    #learn a {
-        text-decoration: none;
-        color: black;
-    }
+#focus {
+float: right;
+max-height: 700px;
+max-width: 700px;
+padding-left: 5%;
+padding-right: 5%;
+width: 100%;
+height: 60%;
+}
 
-    @media only screen and (min-width: 480px) {
-        #chronos1 {
-            width: 100%;
-            padding: 0 10% 10% 10%;
-            display: block;
-            max-width: 700px;
-            max-height: 800px
-        }
 
-        p {
-            display: block;
-            line-height: 60px;
-        }
+#progress {
+max-height: 400px;
+max-width: 400px;
+}
+}
 
-        #onTheGo {
-            display: block;
-            max-height: 1000px;
-            max-width: 1000px;
-            width: 100%;
-            height: 60%;
-        }
+#title {
+font-size: 3.7em;
+color: darkblue;
+font-family: Cinzel;
+border-bottom: 3px solid darkblue;
+}
 
-        #mainOne {
-            font-size: 80px;
-            margin: 0 0 65px 0;
-            padding-top: 8%;
-            font-family: Cinzel;
-            font-weight: 100;
-        }
+#myNavbar {
+background-color: rgba(255, 255, 255, 0.26);
+}
 
-        #focus {
-            float: right;
-            max-height: 700px;
-            max-width: 700px;
-            padding-left: 5%;
-            padding-right: 5%;
-            width: 100%;
-            height: 60%;
-        }
+#mainQuote {
+padding: 6px;
+font-size: 35px;
+width: 70%;
+border: 3px solid white;
+margin: 5% 15%;
+}
+#quoteWho {
+font-size: 20px;
+line-height: 25px;
+width: 45%;
+margin-left: 55%;
+}
 
-        .facts {
-            font-size: 70px;
-            margin-bottom: -20px;
-            font-family: Cinzel;
-        }
+@media screen and (min-width: 1024px) and (max-height: 1410px) {
+.bgimg-1 {
+background-image: url(https://legalworks.se/wp-content/uploads/2018/08/desktop-2325627_960_720.jpg);
+min-height: 100%;
+}
 
-        .factNote {
-            font-size: 45px;
-            border-bottom: 4px solid white;
-            display: block;
-            margin: 0 10% 10% 10%;
-            padding-bottom: 30px;
+.w3-display-middle {
+position: absolute;
+top: 43%;
+left: 50%;
+transform: translate(-50%, -50%);
+-ms-transform: translate(-50%, -50%);
+}
 
-        }
+#learn {
+font-size: 27px;
+}
 
-        #progress {
-            max-height: 400px;
-            max-width: 400px;
-        }
-    }
+#title {
+font-size: 85px;
+}
 
-    #title {
-        font-size: 3.7em;
-        color: darkblue;
-        font-family: Cinzel;
-        border-bottom: 3px solid darkblue;
-    }
+#start {
+font-size: 22px;
+}
 
-    #myNavbar {
-        background-color: rgba(255, 255, 255, 0.26);
-    }
+#myNavbar {}
+}
 
-    @media screen and (min-width: 1024px) and (max-height: 1410px) {
-        .bgimg-1 {
-            background-image: url(../bgPics/desktopBg.jpeg);
-            min-height: 100%;
-        }
+/*!!!! img needs reponse*/
+div.gallery img {
+width: 45%;
+height: auto;
+}
 
-        .w3-display-middle {
-            position: absolute;
-            top: 43%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            -ms-transform: translate(-50%, -50%);
-        }
+div.desc {
+padding: 15px;
+text-align: center;
+font-size: 21px;
+}
 
-        #learn {
-            font-size: 27px;
-        }
+* {
+box-sizing: border-box;
+}
 
-        #title {
-            font-size: 85px;
-        }
+.responsive {
+padding: 0 6px;
+float: left;
+width: 33.2%;
+}
+#planningInfo {
+width: 40%;
+float: left;
+margin-left: 10%;
+margin-top: 4.5%;
+text-align: left;
+line-height: 30px;
+}
 
-        #start {
-            font-size: 22px;
-        }
 
-        #myNavbar {}
-    }
+@media only screen and (max-width: 950px) {
+.responsive {
+width: 49.99999%;
+margin: auto 0;
+align-content: center;
+}
+div #north {
+align-content: center;
+}
+
+#goGallery {
+margin: 0 25%;
+}
+}
+@media only screen and (max-width: 850px) {
+.responsive {
+width: 100%;
+}
+#planningInfo {
+float: none;
+margin: 0;
+text-align: center;
+}
+div.gallery img {
+width: 70%;
+height: auto;
+}
+#planningInfo {
+width: 100%;
+text-align: center;
+}
+
+#goGallery {
+margin: 0;
+}
+
+
+}
+/** phone change on images */
+@media only screen and (max-width: 650px) {
+div.gallery img {
+width: 100%;
+height: auto;
+}
+#planningInfo {
+width: 100%;
+}
+#mainQuote {
+border-right: 0px;
+border-left: 0px;
+margin: auto;
+width: 90%;
+}
+
+}
+
+.clearfix:after {
+content: "";
+display: table;
+clear: both;
+
+}
