--- a/css/indexTeam.css
+++ b/css/indexTeam.css
@@ -4,11 +4,15 @@
 
 .column {
   float: left;
-  width: 33.3%;
+  width: 30%;
   margin-bottom: 16px;
   padding: 0 8px;
+  margin: 16px 1.3%;
 }
 
+.row {
+  width: 100%;
+}
 .profileImage {
     margin-top: 35px;
     width:55%;
@@ -60,7 +64,7 @@
 
 .title {
   color: grey;
-  margin: 0;
+  margin: -10px;
 }
 
 .button {
