--- a/css/comp1510.css
+++ b/css/comp1510.css
@@ -5,8 +5,8 @@
       margin: 0;
       background: url(../IconPics/PurpleMountain.jpg) repeat center center fixed;
       background-size: cover;
-      
 /*      background-color: #E9564E;*/
+    
     }
 
     body {
@@ -14,6 +14,7 @@
       padding: 0;
       height: 100%;
       font-family: 'PT Sans Narrow', sans-serif;
+      
     }
 
     .navbar {
@@ -50,7 +51,7 @@
       width: 100%;
       max-height: 195px;
       margin: 0 auto;
-      filter: opacity(0.65);
+      filter: opacity(1);
       box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .35);
     }
 
@@ -109,6 +110,12 @@
       margin-bottom: 0px;
       box-shadow: 0 3px 7px 0px rgba(0, 0, 0, .35);
     }
+
+    #title {
+	font-weight: 600;
+	font-size: 18pt;
+    }     
+
 
     @media screen and (min-width: 768px) {
 
