--- a/css/comp1536.css
+++ b/css/comp1536.css
@@ -48,7 +48,7 @@
       width: 100%;
       max-height: 195px;
       margin: 0 auto;
-      filter: opacity(0.65);
+      filter: opacity(1);
       box-shadow: 0 4px 12px 0px rgba(0, 0, 0, .35);
     }
 
@@ -107,6 +107,11 @@
       margin-bottom: 0px;
       box-shadow: 0 3px 7px 0px rgba(0, 0, 0, .35);
     }
+
+    #title {
+	font-weight: 600;
+	font-size: 18pt;
+    }   
 
     @media screen and (min-width: 768px) {
 
